--- a/dxFramework/imgui.ini
+++ b/dxFramework/imgui.ini
@@ -4,12 +4,22 @@ Size=400,400
 Collapsed=0
 
 [Window][Swap shader window]
-Pos=1030,639
-Size=293,156
+Pos=1024,573
+Size=282,151
 Collapsed=0
 
 [Window][Directional light]
 Pos=60,60
-Size=204,311
+Size=197,296
+Collapsed=0
+
+[Window][Settings]
+Pos=10,-17
+Size=211,382
+Collapsed=0
+
+[Window][BRDF settings]
+Pos=15,365
+Size=234,355
 Collapsed=0
 
