--- a/dxFramework/dxFramework.vcxproj.filters
+++ b/dxFramework/dxFramework.vcxproj.filters
@@ -81,6 +81,9 @@
     <ClInclude Include="ShaderSSAO.h">
       <Filter>Pliki nagłówkowe</Filter>
     </ClInclude>
+    <ClInclude Include="SaveSession.h">
+      <Filter>Pliki nagłówkowe</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dxFramework.cpp">
@@ -132,6 +135,9 @@
       <Filter>Pliki źródłowe</Filter>
     </ClCompile>
     <ClCompile Include="ShaderSSAO.cpp">
+      <Filter>Pliki źródłowe</Filter>
+    </ClCompile>
+    <ClCompile Include="SaveSession.cpp">
       <Filter>Pliki źródłowe</Filter>
     </ClCompile>
   </ItemGroup>
