--- a/dxFramework/dxFramework.vcxproj
+++ b/dxFramework/dxFramework.vcxproj
@@ -174,6 +174,7 @@
     <ClInclude Include="InputManager.h" />
     <ClInclude Include="Main.h" />
     <ClInclude Include="ModelDX.h" />
+    <ClInclude Include="Profiler.h" />
     <ClInclude Include="Renderer.h" />
     <ClInclude Include="RenderTexture.h" />
     <ClInclude Include="SaveSession.h" />
@@ -196,6 +197,7 @@
     <ClCompile Include="InputManager.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="ModelDX.cpp" />
+    <ClCompile Include="Profiler.cpp" />
     <ClCompile Include="Renderer.cpp" />
     <ClCompile Include="RenderTexture.cpp" />
     <ClCompile Include="SaveSession.cpp" />
