--- a/dxFramework/dxFramework.vcxproj.filters
+++ b/dxFramework/dxFramework.vcxproj.filters
@@ -214,5 +214,11 @@
     <FxCompile Include="Shaders\ALL_SettingsBRDF.hlsl">
       <Filter>Shaders</Filter>
     </FxCompile>
+    <FxCompile Include="Shaders\PS_BRDF_Helper.hlsl">
+      <Filter>Shaders</Filter>
+    </FxCompile>
+    <FxCompile Include="Shaders\PS_Unlit.hlsl">
+      <Filter>Shaders</Filter>
+    </FxCompile>
   </ItemGroup>
 </Project>
