--- a/dxFramework/dxFramework.vcxproj.filters
+++ b/dxFramework/dxFramework.vcxproj.filters
@@ -220,5 +220,11 @@
     <FxCompile Include="Shaders\PS_Unlit.hlsl">
       <Filter>Shaders</Filter>
     </FxCompile>
+    <FxCompile Include="Shaders\AreaLights.hlsl">
+      <Filter>Shaders</Filter>
+    </FxCompile>
+    <FxCompile Include="Shaders\Constants.hlsl">
+      <Filter>Shaders</Filter>
+    </FxCompile>
   </ItemGroup>
 </Project>
